# markowitz-optimizer-simulador

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  run.cmd  run.ps1
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js
scripts/: smoke.py  verify_portfolio.py
src/markowitz_optimizer/: __init__.py
src/markowitz_optimizer/ai/: __init__.py  analyst.py
src/markowitz_optimizer/api/: __init__.py  main.py  schemas.py
src/markowitz_optimizer/data/: __init__.py  market_data.py  providers.py
src/markowitz_optimizer/engine/: __init__.py  backtest.py  black_litterman.py  diagnostics.py  markowitz.py
src/markowitz_optimizer/risk/: __init__.py  framework.py
tests/: test_backtest.py  test_black_litterman.py  test_covariance.py  test_diagnostics.py  test_markowitz.py  test_providers.py
